portuguese stemmer added

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -34,12 +34,14 @@ prompts.empty = No extracted texts found.
 prompts.no_python = Python not found! Please enter the path to Python in the Paper Machines preference window.
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
 paramLabels.mallet_dmr.topics = Number of topics
-paramLabels.mallet_dmr.stemming = Porter stemming
+paramLabels.mallet_dmr.stemming = Stemming
 paramLabels.mallet_dmr.tfidf = tf*idf filtering
 paramLabels.mallet_dmr.min_df = minimum doc frequency (for tf*idf)
 paramLabels.mallet_dmr.features = comma-separated list of features (e.g. decade, place, label)
 paramLabels.mallet_lda.topics = Number of topics
-paramLabels.mallet_lda.stemming = Porter stemming
+paramLabels.mallet_lda.stemming = Stemming
+paramLabels.mallet_lda.lang = Language
+paramLabels.mallet_dmr.lang = Language
 paramLabels.mallet_lda.tfidf = tf*idf filtering
 paramLabels.mallet_lda.min_df = minimum doc frequency (for tf*idf)
 paramLabels.mallet_lda.iterations =	Number of iterations
