--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -9,6 +9,7 @@ processNames.geoparser_heatmap = Heat Map
 processNames.geoparser_export = Geoparser Export
 processNames.mallet_lda = Topic Modeling
 processNames.mallet_lda_categorical = Topic Modeling by Subcollection
+processNames.mallet_lda_tags = Topic Modeling by Tags
 processNames.mallet_lda_jstor = Topic Modeling with JSTOR DFR
 processNames.mallet_lda_MI = Mutual Information for Subcollections
 processNames.mallet_dmr = Dirichlet-Multinomial Regression
@@ -20,6 +21,7 @@ processNames.failed = The process log is displayed below. Refreshing status in 1
 processNames.nolog = No log file found.
 processNames.bulk_import = Periodical PDF Import
 processNames.change_field = Bulk Edit Metadata
+processNames.select_tags = Select Tags
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
