--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -33,7 +33,7 @@ prompts.export_dir = Choose directory in which to save (a new folder will be cre
 prompts.export_processes = Choose process results to export
 prompts.import_dir = Choose directory to import
 prompts.empty = No extracted texts found.
-prompts.no_python = Python not found! Please enter the path to Python in the Paper Machines preference window.
+prompts.no_java = Java not found! Please enter the path to Java in the Paper Machines preference window.
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
 paramLabels.mallet_dmr.topics = Number of topics
 paramLabels.mallet_dmr.stemming = Stemming
