--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -72,6 +72,7 @@
 <!ENTITY papermachines.prefs.general.extract			"Data to Extract">
 <!ENTITY papermachines.prefs.general.extract_txt		"Plain Text">
 <!ENTITY papermachines.prefs.general.extract_html		"Web Snapshots (HTML)">
+<!ENTITY papermachines.prefs.general.extract_word		"MS Word Documents">
 <!ENTITY papermachines.prefs.general.extract_pdf		"PDFs with OCR text">
 <!ENTITY papermachines.prefs.general.extract_notes		"Notes">
 <!ENTITY papermachines.prefs.general.extract_tags		"Tags">
