--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -42,6 +42,7 @@ paramLabels.mallet_dmr.min_df = minimum doc frequency (for tf*idf)
 paramLabels.mallet_dmr.features = comma-separated list of features (e.g. decade, place, label)
 paramLabels.mallet_lda.topics = Number of topics
 paramLabels.mallet_lda.stemming = Stemming
+paramLabels.mallet_lda.segmentation = Segment by paragraph
 paramLabels.mallet_lda.lang = Language
 paramLabels.mallet_dmr.lang = Language
 paramLabels.mallet_lda.tfidf = tf*idf filtering
