ngrams (incomplete; js needs work)

--- a/chrome/locale/en-US/papermachines/papermachines.dtd
+++ b/chrome/locale/en-US/papermachines/papermachines.dtd
@@ -11,6 +11,10 @@
 <!ENTITY papermachines.collectionmenu.wordcloud_chronological	"Word Clouds by Time Interval...">
 <!ENTITY papermachines.collectionmenu.wordcloud_multiple	"Word Clouds by Subcollection...">
 
+<!ENTITY papermachines.collectionmenu.ngrams_menu			"N-grams">
+<!ENTITY papermachines.collectionmenu.ngrams				"Top N-grams...">
+<!ENTITY papermachines.collectionmenu.ngrams_specific		"Specific N-grams...">
+
 <!ENTITY papermachines.collectionmenu.phrasenet				"Phrase Net">
 
 <!ENTITY papermachines.collectionmenu.geoparser				"Mapping">
