--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -3,6 +3,7 @@ processNames.wordcloud = Word Cloud
 processNames.wordcloud_large = Large Word Cloud
 processNames.wordcloud_multiple = Multiple Word Clouds
 processNames.wordcloud_chronological = Chronological Word Clouds
+processNames.ngrams = N-grams
 processNames.phrasenet = Phrase Net
 processNames.geoparser_flightpaths = Flight Paths
 processNames.geoparser_heatmap = Heat Map
@@ -35,6 +36,10 @@ prompts.import_dir = Choose directory to import
 prompts.empty = No extracted texts found.
 prompts.no_java = Java not found! Please enter the path to Java in the Paper Machines preference window.
 prompts.resetOutput = This will erase the results of all classifiers, topic models, etc. Are you sure you want to do this?
+paramLabels.ngrams.n = N (1 word to 5 word phrase)
+paramLabels.ngrams.top_ngrams = Top N-grams
+paramLabels.ngrams.min_df = minimum number of docs containing N-gram
+paramLabels.ngrams.interval = time interval (in days)
 paramLabels.mallet_dmr.topics = Number of topics
 paramLabels.mallet_dmr.stemming = Stemming
 paramLabels.mallet_dmr.tfidf = tf*idf filtering
