--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -1,6 +1,7 @@
 processNames.extract = Extracting
 processNames.wordcloud = Word Cloud
 processNames.wordcloud_large = Large Word Cloud
+processNames.wordcloud_translate = Word Cloud Translation
 processNames.wordcloud_multiple = Multiple Word Clouds
 processNames.wordcloud_chronological = Chronological Word Clouds
 processNames.ngrams = N-grams
@@ -40,6 +41,9 @@ paramLabels.ngrams.n = N (1 word to 5 word phrase)
 paramLabels.ngrams.top_ngrams = Top N-grams
 paramLabels.ngrams.min_df = minimum number of docs containing N-gram
 paramLabels.ngrams.interval = time interval (in days)
+paramLabels.wordcloud_translate.lang_from = Language to convert from
+paramLabels.wordcloud_translate.lang_to = Language to convert to
+paramLabels.wordcloud_translate.tfidf = TF-IDF filter (remove common words)
 paramLabels.mallet_dmr.topics = Number of topics
 paramLabels.mallet_dmr.stemming = Stemming
 paramLabels.mallet_dmr.tfidf = tf*idf filtering
