--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -3,6 +3,7 @@ processNames.wordcloud = Word Cloud
 processNames.wordcloud_large = Large Word Cloud
 processNames.wordcloud_translate = Word Cloud Translation
 processNames.wordcloud_multiple = Multiple Word Clouds
+processNames.wordcloud_translate_multiple = Translated Multiple Word Clouds
 processNames.wordcloud_chronological = Chronological Word Clouds
 processNames.ngrams = N-grams
 processNames.phrasenet = Phrase Net
