--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -34,6 +34,8 @@ prompts.wordcloud_multiple = Select filter method
 prompts.phrasenet_custom = Enter a regular expression (substitute x and y for words of interest):
 prompts.export_dir = Choose directory in which to save (a new folder will be created)
 prompts.export_processes = Choose process results to export
+prompts.reset_processes = Choose process results to reset
+prompts.view_process = View the result of a process
 prompts.import_dir = Choose directory to import
 prompts.empty = No extracted texts found.
 prompts.no_java = Java not found! Please enter the path to Java in the Paper Machines preference window.
