reenable ngrams; start and end date for chronological word clouds

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -47,6 +47,9 @@ paramLabels.ngrams.interval = time interval (in days)
 paramLabels.wordcloud_translate.lang_from = Language to convert from
 paramLabels.wordcloud_translate.lang_to = Language to convert to
 paramLabels.wordcloud_translate.tfidf = TF-IDF filter (remove common words)
+paramLabels.wordcloud_chronological.start_date = Start date in YYYY-MM-DD format (default: earliest doc)
+paramLabels.wordcloud_chronological.end_date = End date in YYYY-MM-DD format (default: latest doc)
+paramLabels.wordcloud_chronological.interval = Interval in days (default: 90)
 paramLabels.mallet_dmr.topics = Number of topics
 paramLabels.mallet_dmr.stemming = Stemming
 paramLabels.mallet_dmr.tfidf = tf*idf filtering
