--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -44,6 +44,8 @@ paramLabels.ngrams.n = N (1 word to 5 word phrase)
 paramLabels.ngrams.top_ngrams = Top N-grams
 paramLabels.ngrams.min_df = minimum number of docs containing N-gram
 paramLabels.ngrams.interval = time interval (in days)
+paramLabels.ngrams.start_date = Start date in YYYY-MM-DD format (default: earliest doc)
+paramLabels.ngrams.end_date = End date in YYYY-MM-DD format (default: latest doc)
 paramLabels.wordcloud_translate.lang_from = Language to convert from
 paramLabels.wordcloud_translate.lang_to = Language to convert to
 paramLabels.wordcloud_translate.tfidf = TF-IDF filter (remove common words)
