mallet_lda: hide segmentation opt, add year range

--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -61,6 +61,7 @@ paramLabels.mallet_lda.topics = Number of topics
 paramLabels.mallet_lda.stemming = Stemming
 paramLabels.mallet_lda.segmentation = Segment by paragraph
 paramLabels.mallet_lda.lang = Language
+paramLabels.mallet_lda.year_range = Year range (e.g. 1800-1900)
 paramLabels.mallet_dmr.lang = Language
 paramLabels.mallet_lda.tfidf = tf*idf filtering
 paramLabels.mallet_lda.min_df = minimum doc frequency (for tf*idf)
