--- a/chrome/locale/en-US/papermachines/papermachines.properties
+++ b/chrome/locale/en-US/papermachines/papermachines.properties
@@ -26,6 +26,7 @@ processNames.bulk_import = Periodical PDF Import
 processNames.change_field = Bulk Edit Metadata
 processNames.select_tags = Select Tags
 processNames.highlight_phrase = Highlight Phrase
+processNames.index = Index Texts
 prompts.mallet_classify-file = Select classifier to use
 prompts.mallet_lda_jstor = Add JSTOR DFR set
 prompts.mallet_lda_MI = Must run topic modeling (by time or subcollection) first
